--- a/render.yaml
+++ b/render.yaml
@@ -14,6 +14,12 @@ services:
           property: connectionString
       - key: JWT_SECRET
         generateValue: true
+      - key: JWT_EXP_SEC
+        value: "3600"
+      - key: JWT_EXP_DYS
+        value: "7d"
+      - key: COOKIE_NAME
+        value: "crm-auth-token"
     healthCheckPath: /
     
   - type: pserv
