--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
     name: crm-nuxt-app
-    env: node
+    env: docker
     plan: free
-    buildCommand: npm ci && npx prisma generate && npm run build
-    startCommand: node .output/server/index.mjs
+    dockerfilePath: ./Dockerfile
+    dockerContext: .
     envVars:
       - key: NODE_ENV
         value: production
